--- a/main.tex
+++ b/main.tex
@@ -118,7 +118,7 @@
 \(^1\): University of Birmingham, School of Psychology, Centre for Human Brain Health, Birmingham B15 2SA, UK\\
 \(^2\): Carl-von-Ossietzky University of Oldenburg, Faculty VI - Medicine and Health Sciences, Department of Psychology, 26129 Oldenburg, Germany
 
-\textbf{Email: } k.duecker@bham.ac.uk (K.D.; correspondence), tgutteling.gmail.com (T.P.G.), christoph.herrmann@uni-oldenburg.de (C.S.H.), o.jensen@bham.ac.uk (O.J.; correspondence)
+\textbf{Email: } k.duecker@bham.ac.uk (K.D.; correspondence), t.p.gutteling@bham.ac.uk (T.P.G.), christoph.herrmann@uni-oldenburg.de (C.S.H.), o.jensen@bham.ac.uk (O.J.; correspondence)
 
 \textbf{Contributions:} K.D., C.S.H. and O.J. conceptualised the study; K.D., T.P.G. and O.J. programmed the experiment; K.D. recorded the data; all authors analysed the data and wrote the manuscript. 
 
@@ -126,7 +126,7 @@
 \textbf{Abbreviated title:} \shorttitle
 
 
-\textbf{Number of pages:} 43
+\textbf{Number of pages:} 41
 
 \textbf{Number of figures:} 10
 
