--- a/biblio_doi.bib
+++ b/biblio_doi.bib
@@ -981,6 +981,21 @@ author = {Kumpulainen, Pekka},
 title = {{tight{\_}subplot() (https://www.mathworks.com/matlabcentral/fileexchange/27991-tight{\_}subplot-nh-nw-gap-marg{\_}h-marg{\_}w), MATLAB Central File Exchange.}},
 year = {2020}
 }
+@Manual{R,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2020},
+    url = {https://www.R-project.org/},
+  }
+  @Manual{BayesFactor,
+    title = {BayesFactor: Computation of Bayes Factors for Common Designs},
+    author = {Richard D. Morey and Jeffrey N. Rouder},
+    year = {2018},
+    note = {R package version 0.9.12-4.2},
+    url = {https://CRAN.R-project.org/package=BayesFactor},
+  }
 @article{quintana2018bayesian,
   title={Bayesian alternatives for common null-hypothesis significance tests in psychiatry: a non-technical guide using JASP},
   author={Quintana, Daniel S and Williams, Donald R},
@@ -991,6 +1006,13 @@ year = {2020}
   publisher={Springer},
   doi = {10.1186/s12888-018-1761-4}
 }
+  @Manual{ez,
+    title = {ez: Easy Analysis and Visualization of Factorial Experiments},
+    author = {Michael A. Lawrence},
+    year = {2016},
+    note = {R package version 4.4-0},
+    url = {https://CRAN.R-project.org/package=ez},
+  }
 @article{lacadie2008more,
 abstract = {While the Talairach atlas remains the most commonly used system for reporting coordinates in neuroimaging studies, the absence of an actual 3-D image of the original brain used in its construction has severely limited the ability of researchers to automatically map locations from 3-D anatomical MRI images to the atlas. Previous work in this area attempted to circumvent this problem by constructing approximate linear and piecewise-linear mappings between standard brain templates (e.g. the MNI template) and Talairach space. These methods are limited in that they can only account for differences in overall brain size and orientation but cannot correct for the actual shape differences between the MNI template and the Talairach brain. In this paper we describe our work to digitize the Talairach atlas and generate a non-linear mapping between the Talairach atlas and the MNI template that attempts to compensate for the actual differences in shape between the two, resulting in more accurate coordinate transformations. We present examples in this paper and note that the method is available freely online as a Java applet. {\textcopyright} 2008 Elsevier Inc. All rights reserved.},
 author = {Lacadie, Cheryl M. and Fulbright, Robert K. and Rajeevan, Nallakkandi and Constable, R. Todd and Papademetris, Xenophon},
